@startuml

title __LEVELMODULE's Class Diagram__\n

  namespace LevelModule {
    class LevelModule.AddLevelRoleCommand {
        - perm : Permission
        + execute()
        + getPerm()
    }
  }
  

  namespace LevelModule {
    class LevelModule.GuildMap {
        - guildMap : Map<Guild, MemberMap>
        + addLevelRole()
        + checkForRoleLevel()
        + containsKey()
        + containsMember()
        + get()
        + getUserLevel()
        + put()
    }
  }
  

  namespace LevelModule {
    class LevelModule.LevelController {
        {static} - filename : String
        {static} - guildMap : GuildMap
        {static} - levelDB : LevelDBConnector
        {static} + addExp()
        {static} + addGuild()
        {static} + addLevelRole()
        {static} + checkForRoleLevel()
        {static} + checkMember()
        {static} + getUserInfo()
        {static} + writeToDisk()
    }
  }
  

  namespace LevelModule {
    class LevelModule.LevelDBConnector {
        - conn : Connection
        + LevelDBConnector()
        + addUserExp()
        + newGuildTable()
        - DBUserExist()
        - addExpToDBUser()
        - connect()
        - createDBTable()
        - createDBUser()
    }
  }
  

  namespace LevelModule {
    class LevelModule.LevelListener {
        + LevelListener()
        + onGuildJoin()
        + onGuildMessageReceived()
    }
  }
  

  namespace LevelModule {
    class LevelModule.MemberMap {
        - levelRoleMap : Map<Integer, Role>
        - memberMap : Map<Member, UserLevel>
        + containsKey()
        + containsLevelRoleKey()
        + get()
        + put()
        + putLevelRole()
        + setLevelRole()
    }
  }
  

  namespace LevelModule {
    class LevelModule.ProfileCommand {
        + execute()
    }
  }
  

  namespace LevelModule {
    class LevelModule.UserLevel {
        - currentExp : int
        - level : int
        - member : Member
        - nextLevelExp : int
        + UserLevel()
        + addExp()
        + getCurrentExp()
        + getLevel()
        + getMember()
        + getNextLevelExp()
        - levelUp()
    }
  }
  

  LevelModule.AddLevelRoleCommand -up-|> Commands.Command
  LevelModule.LevelListener -up-|> net.dv8tion.jda.api.hooks.ListenerAdapter
  LevelModule.LevelListener o-- EconomyModule.EconomyController : economyController
  LevelModule.ProfileCommand -up-|> Commands.Command


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
